--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@metamask/eth-hd-keyring": "https://github.com/spruce-solutions/eth-hd-keyring",
+    "@metamask/quai-hd-keyring": "https://github.com/spruce-solutions/eth-hd-keyring",
     "bip39": "^3.0.4",
     "browser-passworder": "^2.0.3",
     "eth-hd-keyring": "^3.6.0",
